...
                    builder: (_) => NostrKeyDetailScreen.user(record),
                  ),
                ),
              ),
            const Gap(BullSpacing.lg),
            BullButton.big(
              key: const ValueKey('create-nostr-key'),
              label: context.loc.settingsNostrKeysCreate,
              onPressed: () => _create(context),
              bgColor: context.appColors.primary,
              textColor: context.appColors.onPrimary,
            ),
            const Gap(BullSpacing.lg),
...
